--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -8,6 +8,18 @@
   display: none; /*hrome, Safari and Opera */
 }
 
+h2 {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  background-image: linear-gradient(45deg, #f3ec78, #af4261);
+  background-size: 100%;
+  background-repeat: repeat;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .NavBar {
   font-family: "Poppins", sans-serif;
   font-size: 1.5rem;
@@ -19,6 +31,7 @@
   justify-content: center;
   width: 100%;
   height: 3rem;
+  z-index: 999999;
   color: #f3ec78;
   background: rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(5px);
@@ -59,7 +72,7 @@
   background: linear-gradient(0deg, rgb(0, 0, 0) 0%, rgba(0, 0, 0, 0.8547794118) 11%, rgba(78, 76, 76, 0.6867121849) 100%);
 }
 .LandingPage .container .content {
-  margin: 8rem 3rem;
+  margin: 10rem 3rem;
 }
 .LandingPage .container .content .hello {
   font-weight: 400;
@@ -83,18 +96,75 @@
 .AboutMe {
   font-family: "Poppins", sans-serif;
   font-size: 1.5rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   height: 100vh;
   width: 100vw;
   background-color: black;
 }
-.AboutMe h2 {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  background-image: linear-gradient(45deg, #f3ec78, #af4261);
-  background-size: 100%;
-  background-repeat: repeat;
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+.AboutMe .content {
+  margin: 4rem 0.5rem 4rem 6rem;
+  width: 50%;
+}
+.AboutMe .content p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  width: 80%;
+  margin-top: 1rem;
+  color: #f3ec78;
+}
+.AboutMe .skills {
+  width: 50%;
+  height: 50%;
+  margin: 4rem 6rem 4rem 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.AboutMe .skills .SkillsIcons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.AboutMe .skills .SkillsIcons .item {
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.AboutMe .skills .SkillsIcons .item svg {
+  fill: #f3ec78;
+  transform: scale(2);
+  margin: 0.5rem;
+}
+.AboutMe .skills .SkillsIcons .item p {
+  color: #f3ec78;
+}
+.AboutMe .skills .SkillsIcons .one::after,
+.AboutMe .skills .SkillsIcons .six::after {
+  content: "";
+  height: 2px;
+  width: 5rem;
+  background-color: #af4261;
+}
+.AboutMe .skills .SkillsIcons .two,
+.AboutMe .skills .SkillsIcons .five {
+  transform: translate(0, -80px);
+}
+.AboutMe .skills .SkillsIcons .three,
+.AboutMe .skills .SkillsIcons .four {
+  transform: translate(0, -160px);
+}
+
+.Projects {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.5rem;
+  height: 100vh;
+  width: 100vw;
+  background-color: black;
+  display: flex;
+}
+.Projects .content {
+  margin: 4rem 0.5rem 4rem 6rem;
 }/*# sourceMappingURL=styles.css.map */
