--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -12,6 +12,10 @@
   }
 }
 
+h2 {
+  @include text-gradient;
+}
+
 .NavBar {
   @include heading;
 
@@ -23,6 +27,7 @@
   justify-content: center;
   width: 100%;
   height: 3rem;
+  z-index: 999999;
 
   color: $light-text-color;
   background: rgba(0, 0, 0, 0.2);
@@ -73,7 +78,7 @@
     );
 
     .content {
-      margin: 8rem 3rem;
+      margin: 10rem 3rem;
       .hello {
         font-weight: 400;
         -webkit-text-fill-color: transparent;
@@ -92,11 +97,84 @@
 .AboutMe {
   @include heading;
 
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   height: 100vh;
   width: 100vw;
   background-color: black;
 
-  h2 {
-    @include text-gradient;
+  .content {
+    margin: 4rem 0.5rem 4rem 6rem;
+    width: 50%;
+
+    p {
+      @include text;
+      width: 80%;
+      margin-top: 1rem;
+      color: $light-text-color;
+    }
+  }
+
+  .skills {
+    width: 50%;
+    height: 50%;
+    margin: 4rem 6rem 4rem 0.5rem;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .SkillsIcons {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      .item {
+        margin: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        svg {
+          fill: $light-text-color;
+          transform: scale(2);
+          margin: 0.5rem;
+        }
+
+        p {
+          color: $light-text-color;
+        }
+      }
+
+      .one::after,
+      .six::after {
+        content: "";
+        height: 2px;
+        width: 5rem;
+        background-color: $dark-text-color;
+      }
+
+      .two,
+      .five {
+        transform: translate(0, -80px);
+      }
+      .three,
+      .four {
+        transform: translate(0, -160px);
+      }
+    }
+  }
+}
+
+.Projects {
+  @include heading;
+  height: 100vh;
+  width: 100vw;
+  background-color: black;
+  display: flex;
+
+  .content {
+    margin: 4rem 0.5rem 4rem 6rem;
   }
 }
