--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,2 +1,7 @@
-$light-text-color: #f3ec78;
-$dark-text-color: #af4261;
+$light-warm-color: #f3ec78;
+$dark-warm-color: #af4261;
+
+$light-cold-color: #695065;
+$dark-cold-color: #2b193f;
+
+$text-color: white;
