Add first project

--- a/src/Styles/_variables.scss
+++ b/src/Styles/_variables.scss
@@ -1,7 +1,7 @@
 $light-warm-color: #f3ec78;
-$dark-warm-color: #af4261;
+$dark-warm-color: #9c4a1a;
 
-$light-cold-color: #695065;
-$dark-cold-color: #2b193f;
+$light-cold-color: #756c63;
+$dark-cold-color: #423930;
 
 $text-color: white;
