--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -41,7 +41,7 @@ body {
     $dark-cold-color
   );
   background-size: 400% 400%;
-  animation: gradient 15s ease infinite;
+  animation: gradient 10s ease infinite;
 
   .container {
     height: 100vh;
@@ -114,8 +114,7 @@ body {
 }
 
 .AboutMe {
-  height: 100vh;
-  padding: 5rem 0;
+  padding-top: 5rem;
   background-color: black;
   color: $light-warm-color;
 
@@ -128,6 +127,7 @@ body {
     justify-content: center;
     align-items: center;
 
+    margin-top: 5rem;
     padding: 1rem 3rem;
     font-size: 1.5rem;
 
@@ -135,18 +135,22 @@ body {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+      justify-content: space-between;
 
-      margin: 3rem 0;
+      margin: 5rem 0;
 
       .text {
         text-align: justify;
-        max-width: 50%;
+        max-width: 40%;
         min-width: 18rem;
         margin: auto;
       }
 
       .skills {
         margin: auto;
+        margin-top: 3rem;
+        max-width: 60%;
+
         .SkillsIcons {
           display: flex;
           flex-direction: row;
@@ -155,7 +159,7 @@ body {
           align-items: center;
 
           .item {
-            margin: 1.5rem;
+            margin: 2rem 1rem;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -174,10 +178,68 @@ body {
 
 .Projects {
   background-color: black;
+
   color: $light-warm-color;
   display: flex;
+  flex-direction: column;
+  svg {
+    fill: rgba($light-cold-color, 0.4);
+  }
 
-  .content {
-    margin: 4rem 0.5rem 4rem 6rem;
+  .container {
+    width: 100%;
+    background-color: rgba($light-cold-color, 0.4);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 1.5rem;
+    .content {
+      margin: 3rem;
+      max-width: 100%;
+
+      display: flex;
+      flex-direction: row-reverse;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      align-items: center;
+
+      .text {
+        max-width: 50%;
+        min-width: 18rem;
+        text-align: justify;
+      }
+
+      .images {
+        margin-top: 2rem;
+        max-width: 50%;
+        min-width: 18rem;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        img {
+          border-radius: 16px;
+          -webkit-box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
+          -moz-box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
+          box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
+          max-width: 80%;
+          margin: 0.5rem;
+          position: relative;
+        }
+
+        .arows {
+          margin-top: 1.5rem;
+          svg {
+            fill: $light-cold-color;
+            cursor: pointer;
+          }
+        }
+      }
+    }
   }
 }
