--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -197,6 +197,10 @@ body {
 
     font-size: 1.5rem;
     .content {
+      &:nth-last-child(1) {
+        flex-direction: row;
+      }
+
       margin: 3rem;
       max-width: 100%;
 
@@ -206,10 +210,24 @@ body {
       justify-content: space-between;
       align-items: center;
 
+      img {
+        border-radius: 16px;
+        -webkit-box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
+        -moz-box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
+        box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
+        max-width: 80%;
+        margin: 0.5rem;
+        position: relative;
+      }
+
       .text {
         max-width: 50%;
         min-width: 18rem;
         text-align: justify;
+
+        h3 {
+          text-align: left;
+        }
       }
 
       .images {
@@ -222,21 +240,32 @@ body {
         justify-content: center;
         align-items: center;
 
-        img {
-          border-radius: 16px;
-          -webkit-box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
-          -moz-box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
-          box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
-          max-width: 80%;
-          margin: 0.5rem;
-          position: relative;
-        }
-
         .arows {
           margin-top: 1.5rem;
           svg {
             fill: $light-cold-color;
             cursor: pointer;
+          }
+        }
+      }
+      .gallery {
+        width: 100%;
+        margin-top: 5rem;
+
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+
+        .item {
+          width: 40%;
+          margin: 1rem;
+
+          text-align: center;
+          img {
+            max-width: 100%;
+            margin-bottom: 1rem;
           }
         }
       }
