--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -106,6 +106,7 @@ body {
       flex-wrap: wrap;
 
       width: fit-content;
+      margin: 1rem;
 
       background: rgba($text-color, 0.1);
       border-radius: 16px;
@@ -208,9 +209,9 @@ body {
 
     img {
       border-radius: 16px;
-      -webkit-box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
-      -moz-box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
-      box-shadow: 25px 35px 43px -21px rgba(0, 0, 0, 1);
+      -webkit-box-shadow: 8px 7px 24px 0px rgba(0, 0, 0, 1);
+      -moz-box-shadow: 8px 7px 24px 0px rgba(0, 0, 0, 1);
+      box-shadow: 8px 7px 24px 0px rgba(0, 0, 0, 1);
       max-width: 80%;
       position: relative;
     }
@@ -226,18 +227,21 @@ body {
       display: flex;
       flex-direction: row-reverse;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
 
       .text {
-        margin-top: 1.5rem;
+        margin: 1.5rem 2rem;
         max-width: 50%;
         min-width: 18rem;
+
+        a {
+          color: $light-warm-color;
+        }
       }
 
       .images {
-        margin-top: 2rem;
-        max-width: 50%;
+        max-width: 40%;
         min-width: 18rem;
 
         display: flex;
@@ -245,42 +249,38 @@ body {
         justify-content: center;
         align-items: center;
 
-        .arows {
-          margin-top: 1.5rem;
-          svg {
-            fill: $light-cold-color;
-            cursor: pointer;
-
-            &:hover {
-              fill: $light-warm-color;
-            }
-          }
+        img {
+          margin: 2rem 0;
         }
       }
     }
     .gallery {
       width: 100%;
-      margin-top: 1rem;
+      margin: 1rem;
 
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-
-      overflow-x: scroll;
-      white-space: nowrap;
       .item {
-        min-width: fit-content;
-        max-width: 50%;
-        margin: 0.5rem;
-
         text-align: center;
+
         img {
           max-width: 40vw;
           min-width: 18rem;
           margin-bottom: 1rem;
-          box-shadow: none;
         }
       }
+    }
+  }
+
+  .carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .carousel-slider {
+      overflow: visible;
+    }
+
+    .control-dots {
+      bottom: -4vh;
     }
   }
 }
