--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -49,6 +49,22 @@ body {
     background-position: 0% 50%;
   }
 }
+@-webkit-keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .LandingPage {
   height: 100vh;
   min-height: 100vh;
@@ -76,6 +92,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  -webkit-animation: fade-in 2s linear;
+          animation: fade-in 2s linear;
 }
 .LandingPage .container .content .hello,
 .LandingPage .container .content .heading {
@@ -102,6 +120,8 @@ body {
   width: -moz-fit-content;
   width: fit-content;
   margin: 1rem;
+  -webkit-animation: fade-in 2s linear;
+          animation: fade-in 2s linear;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -113,6 +133,7 @@ body {
   font-size: 3vh;
   padding: 0.5rem;
   margin: 1rem;
+  cursor: pointer;
 }
 
 .AboutMe {
