--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -40,6 +40,15 @@ body {
   }
 }
 
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 .LandingPage {
   height: 100vh;
   min-height: 100vh;
@@ -78,6 +87,8 @@ body {
       justify-content: center;
       align-items: center;
 
+      animation: fade-in 2s linear;
+
       .hello,
       .heading {
         text-align: center;
@@ -108,6 +119,8 @@ body {
       width: fit-content;
       margin: 1rem;
 
+      animation: fade-in 2s linear;
+
       background: rgba($text-color, 0.1);
       border-radius: 16px;
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
@@ -119,6 +132,7 @@ body {
         font-size: 3vh;
         padding: 0.5rem;
         margin: 1rem;
+        cursor: pointer;
       }
     }
   }
