--- a/src/Styles/styles.scss
+++ b/src/Styles/styles.scss
@@ -5,7 +5,18 @@
   margin: 0;
   padding: 0;
   user-select: none;
-  overflow: hidden;
+  ::-webkit-scrollbar {
+    width: 0;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar {
+    display: none; /*hrome, Safari and Opera */
+  }
 }
 
 body {
@@ -341,5 +352,18 @@ body {
       transform: scale(1.5);
       margin: 0.5rem;
     }
+  }
+}
+
+.ScrollToTop {
+  width: fit-content;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+
+  margin: 2vh;
+  svg {
+    fill: $light-warm-color;
+    opacity: 0.6;
   }
 }
