--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -330,4 +330,26 @@ body {
 .ScrollToTop svg {
   fill: #f3ec78;
   opacity: 0.6;
+}
+
+.Alert {
+  width: 20%;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+  height: 5vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1rem;
+  padding: 0.5rem;
+  font-size: 2vh;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.8px);
+  -webkit-backdrop-filter: blur(10.8px);
 }/*# sourceMappingURL=styles.css.map */
