--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -209,6 +209,31 @@ body {
 .Projects .container .content .text a {
   color: #f3ec78;
 }
+.Projects .container .content .text .button {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 3vh;
+  margin-top: 2vh;
+  padding: 1vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 2.5vh;
+  border: solid 1px #f3ec78;
+  transition: all 0.5s;
+}
+.Projects .container .content .text .button svg {
+  fill: #f3ec78;
+  margin: 0.5vh;
+}
+.Projects .container .content .text .button a {
+  text-decoration: none;
+  margin: 0.5vh;
+}
+.Projects .container .content .text .button:hover {
+  transform: translateY(-1vh);
+}
 .Projects .container .content .images {
   max-width: 40%;
   min-width: 18rem;
@@ -304,6 +329,11 @@ body {
   border: none;
   border-radius: 16px;
   width: 70%;
+  transition: all 0.5s;
+}
+.Contact form input[type=submit]:hover,
+.Contact form textarea[type=submit]:hover {
+  background-color: #f3ec78;
 }
 .Contact form textarea {
   height: 15rem;
