Correct text and add button styling

--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -330,6 +330,7 @@ body {
   border-radius: 16px;
   width: 70%;
   transition: all 0.5s;
+  cursor: pointer;
 }
 .Contact form input[type=submit]:hover,
 .Contact form textarea[type=submit]:hover {
